// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`example.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
await something();

=====================================output=====================================
await something();

================================================================================
`;

exports[`in-expression.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
call(
await something()
)

=====================================output=====================================
call(await something());

================================================================================
`;

exports[`test.cjs format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
await(1);

=====================================output=====================================
await(1);

================================================================================
`;

exports[`test.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
await(1);

=====================================output=====================================
await 1;

================================================================================
`;

exports[`test.mjs format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
await(1);

=====================================output=====================================
await 1;

================================================================================
`;
